@@ -1,51 +1,61 @@
 package com.clothingstore.clothing_store_api.config;
 
 import com.clothingstore.clothing_store_api.entity.User;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class CustomUserDetails implements UserDetails {
-    User user;
+
+    @Getter
+    private User user;
+    private Collection<? extends GrantedAuthority> authorities;
+
+    public CustomUserDetails() {
+    }
+    public void setAuthorities(Collection<? extends GrantedAuthority> authorities) {
+        this.authorities = authorities;
+    }
+
+    public void setUser(User user) {
+        this.user = user;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        if (user == null || user.getRole() == null) {
+            return Collections.emptyList();
+        }
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
     }
-    public User getUser() {
-        return this.user;
-    }
+
     @Override
     public String getPassword() {
-        return "";
+        return user != null ? user.getPasswordHash() : "";
     }
 
     @Override
     public String getUsername() {
-        return "";
+        return user != null ? user.getUsername() : "";
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        return UserDetails.super.isAccountNonExpired();
+        return true;
     }
-    public void setUser(User user) {
-        this.user = user;
-    }
+
     @Override
     public boolean isAccountNonLocked() {
-        return UserDetails.super.isAccountNonLocked();
+        return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return UserDetails.super.isCredentialsNonExpired();
+        return true;
     }
 
-    @Override
-    public boolean isEnabled() {
-        return UserDetails.super.isEnabled();
-    }
 }
